@@ -2,6 +2,8 @@
 	* fixed Socket::connect() with timeout
 	* added new generic calling convention for builtin class methods with
 	  a const pointer to the QoreMethod being called
+	* fixed DatasourcePool class handling of database disconnections when
+	  automatic reconnect fails
 
 2009.07.20: David Nichols
 	* added static method TermIOS::getWindowSize() to get the current size
